--- a/ContainerLoadingProblem-AI_UWr.vcxproj
+++ b/ContainerLoadingProblem-AI_UWr.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClCompile Include="Source\ContainerLoading\PackageGenerator.cpp" />
     <ClCompile Include="Source\ContainerLoading\Utils\Dimensions.cpp" />
+    <ClCompile Include="Source\ContainerLoading\Utils\Layer.cpp" />
     <ClCompile Include="Source\ContainerLoading\Utils\Package.cpp" />
     <ClCompile Include="Source\main.cpp" />
   </ItemGroup>
@@ -88,6 +89,7 @@
     <ClInclude Include="Source\ContainerLoading\IPackageGenerator.h" />
     <ClInclude Include="Source\ContainerLoading\PackageGenerator.h" />
     <ClInclude Include="Source\ContainerLoading\Utils\Dimensions.h" />
+    <ClInclude Include="Source\ContainerLoading\Utils\Layer.h" />
     <ClInclude Include="Source\ContainerLoading\Utils\Package.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
