Added simple construction algorithm

--- a/ContainerLoadingProblem-AI_UWr.vcxproj
+++ b/ContainerLoadingProblem-AI_UWr.vcxproj
@@ -79,6 +79,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\ContainerLoading\Algorithm\ConstructionAlgorithm.cpp" />
+    <ClCompile Include="Source\ContainerLoading\Algorithm\IAlgorithm.cpp" />
+    <ClCompile Include="Source\ContainerLoading\ContainerLoader.cpp" />
     <ClCompile Include="Source\ContainerLoading\PackageGenerator.cpp" />
     <ClCompile Include="Source\ContainerLoading\Utils\Container.cpp" />
     <ClCompile Include="Source\ContainerLoading\Utils\Dimensions.cpp" />
@@ -87,6 +90,9 @@
     <ClCompile Include="Source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\ContainerLoading\Algorithm\ConstructionAlgorithm.h" />
+    <ClInclude Include="Source\ContainerLoading\Algorithm\IAlgorithm.h" />
+    <ClInclude Include="Source\ContainerLoading\ContainerLoader.h" />
     <ClInclude Include="Source\ContainerLoading\IPackageGenerator.h" />
     <ClInclude Include="Source\ContainerLoading\PackageGenerator.h" />
     <ClInclude Include="Source\ContainerLoading\Utils\Container.h" />
