Added skeleton for simulated annealing algorithm

--- a/ContainerLoadingProblem-AI_UWr.vcxproj
+++ b/ContainerLoadingProblem-AI_UWr.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClCompile Include="Source\ContainerLoading\Algorithm\ConstructionAlgorithm.cpp" />
     <ClCompile Include="Source\ContainerLoading\Algorithm\IAlgorithm.cpp" />
+    <ClCompile Include="Source\ContainerLoading\Algorithm\SimulatedAnnealing.cpp" />
     <ClCompile Include="Source\ContainerLoading\ContainerLoader.cpp" />
     <ClCompile Include="Source\ContainerLoading\PackageGenerator.cpp" />
     <ClCompile Include="Source\ContainerLoading\Utils\Container.cpp" />
@@ -90,8 +91,10 @@
     <ClCompile Include="Source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\ContainerLoading\Algorithm\AcceptanceFunction.h" />
     <ClInclude Include="Source\ContainerLoading\Algorithm\ConstructionAlgorithm.h" />
     <ClInclude Include="Source\ContainerLoading\Algorithm\IAlgorithm.h" />
+    <ClInclude Include="Source\ContainerLoading\Algorithm\SimulatedAnnealing.h" />
     <ClInclude Include="Source\ContainerLoading\ContainerLoader.h" />
     <ClInclude Include="Source\ContainerLoading\IPackageGenerator.h" />
     <ClInclude Include="Source\ContainerLoading\PackageGenerator.h" />
